--- a/style.css
+++ b/style.css
@@ -40,3 +40,16 @@ li{
 li a{
     color: #5f9341;
 }
+
+li a:hover{
+    color: #38621e;
+}
+
+#delete-btn{
+    background-color: #c92c1b;
+    color: #fff;
+}
+
+#delete-btn:hover{
+    background-color: #a41f13;
+}
